--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <meta http-equiv="expires" content="0">
     <meta name="format-detection" content="telephone=no">
     <meta name="format-detection" content="address=no">
-  </head>
+  <link rel="shortcut icon" href="favicon.ico"><link href="app_c0bd1395.css" rel="stylesheet"></head>
   <body>
     <div id="app"><!-- APP --></div>
-    <script src="<%= webpackConfig.output.publicPath + htmlWebpackPlugin.options.dll %>" charset="utf-8"></script>
-  </body>
+    <script src="dll/vendors_1ee1242d.dll.js" charset="utf-8"></script>
+  <script type="text/javascript" src="app_8c5a753f.js"></script></body>
 </html>
